1. new images 2. images overflow fixed

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,7 +8,7 @@
 }
 
 header {
-    padding: 10px 0 10px 50px;
+    padding: 10px 0 10px 20px;
     font-weight: bold;
     font-family: "Overpass Mono", monospace;
     display: flex;
@@ -48,22 +48,21 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    width: 100%;
-    margin-bottom: 20px;
+    max-width: 80%;
+    margin: 0 0 20px 0;
 }
 
 img {
-    max-height: 170px;
-    margin: 10px 10px;
+    border: 1px solid #21262d;
+    max-height: 200px;
+    margin: 15px 15px;
     border-radius: 5px;
-}
-
-.films-list img:hover {
-    opacity: 50%;
+    box-shadow: 10px 10px 5px #010409
 }
 
 .buttons {
-    width: 50%;
+    max-width: 75%;
+    width: 100%;
     min-width: 40px;
     display: flex;
     justify-content: space-evenly;
@@ -73,7 +72,7 @@ button {
     height: 50px;
     width: 25%;
     min-width: 85px;
-    margin-bottom: 10px;
+    margin: 0 5px 10px 5px;
 }
 
 button:hover {
@@ -88,29 +87,30 @@ button:hover {
 }
 
 .tierlist {
-    height: 200px;
-    width: 100%;
+    height: 240px;
+    max-width: 100%;
     margin-bottom: 20px;
     display: flex;
 }
 
 .tier {
     height: 100%;
-    width: 10%;
-    max-width: 90px;
+    min-width: 50px;
     display: flex;
     justify-content: center;
-    align-items: center;
-}
-
-.tier-content {
-    display: flex;
     align-items: center;
 }
 
 .tier p {
     font-size: 2rem;
     color: #010409;
+}
+
+.tier-content {
+    display: flex;
+    align-items: center;
+    overflow: scroll;
+    margin-left: 10px;
 }
 
 .red {
@@ -164,7 +164,7 @@ button:hover {
 }
 
 .click {
-    opacity: 50%;
+    opacity: 70%;
 }
 
 .pointer {
@@ -173,5 +173,5 @@ button:hover {
 
 .added {
     cursor: default;
-    filter: grayscale(80%);
+    filter: grayscale(100%);
 }
